--- a/note/2018.05.28-ihm-report.md
+++ b/note/2018.05.28-ihm-report.md
@@ -25,6 +25,9 @@ Pour faire une application  la première chose à faire est d'isolé 90% de la p
 
 ### Test Utilisateur
 Un test utilisateur est la partie la plus importante de l'ergonomie. Pour chaque étape il est impératif d'en faire.
+
+Il faut choisir une personne exterieur a l'équipe.
+
 Test utilisateur sur l'application :
   Des observateur reuni devant une télé, filmant une salle. Dans cette salle, un utilisateur et un facilitateur. Les observateur doivent noter tout ce qui genent l'utilisateur.
   * Introduction (5min) : presentation de l'utilisateur (nom, prenom, niveau intelectuelle/d'étude/d'utilisation informatique, ...) ;
@@ -118,6 +121,35 @@ Generalement une liste de critère, une checklist d'élément a retrouver (ou a 
 
 la plus connu les criteres ergonomique de Bastien Scapin 1993
 
+    1. Guidage:
+        1. Incitation
+        2. Groupement
+            1. Distinction par la localisation
+            2. Distinction par la forme
+        3. Feedback immediat
+        4. Lisibilité
+              espacement (eviter le justifier), contraste, taille
+    2. Charge de travail
+        1. brievete
+            1. Concision
+            2. Action minimal
+        2. Densite d information
+    3. Controle explicite
+        1. Action explicite
+        2. controle utilisateur
+    4. Adaptabilite
+        1. Flexibilite
+              triangle: objectif, utilisateur context
+        2. Adaptation à l'expérience de l'utilisateur
+    5. Gestion des erreurs
+        1. Protection contre les erreurs
+        2. Qualité des messages d erreurs
+        3. Corrections des erreurs
+    6. Homogeneite Coherence
+    7. Signifiance et Denominations
+    8. Compatibilite
+
+
 ### Modelisation utilisateur
 
 La modelisation d'utilisateur est la derniere des taches en terme d'importance car dans un monde idéale les équipes sont directement en contact avec les utilisateurs.
@@ -125,3 +157,15 @@ La modelisation d'utilisateur est la derniere des taches en terme d'importance c
 L'ergonome creer personae, des fiches décrivant des utilisateurs (comme toujours pour eviter de trop complexifier les choses 5 personaes  maximum par procesus).
 
 Ces fiches permettent de comprendre que type de personne vont utiliser l'application, comment, et dans quel but.
+
+1. Presentation : qui est-il, nom, prenom, age, situation familiale, niveau intelectuelle/d'étude/d'utilisation informatique,
+2. Caractéristique : qu'est ce qu'y le caractérise, quels sont ces points particuliers ?
+3. Objectif : qu'est ce qu'il veut faire dans la vie, qu'est ce qu'y est important pour lui ?
+4. Scenarios : quels sont ses attentes au niveau de l'application
+
+## L'ergonome n'est pas seul
+
+Lors de la création d'une application plusieurs équipe sont mis en presence : l'ergonome, l'aspect juridique, le business model, le marketing, la hierarchie, ... Chacun possède son pipeline, la priorisation n'aide pas forcement à donner du temps au design.
+
+foubret pour jeoffray quentin
+matau
